--- a/signin/css/style.css
+++ b/signin/css/style.css
@@ -17,22 +17,36 @@ body {
     background-color:#282828;
     background-size:16px 16px;
 }
+h1 {
+    font-size: 4vw;
+}
+h2 {
+    font-size: 2.5vw;
+}
 
 input[type=text], input[type=password] {
     font-size: 1.5vw;
-    height: 9vh;
+    height: 9vw;
     width: 18vw;
     -webkit-appearance: none;
     border: 2px solid #ff007d;
-
-    margin-bottom: 30px;
     color: #ff007d;
     text-align: center;
     border-radius: 10px;
     outline: none;
+    margin: 2vw;
 }
 input[type=text]:focus, input[type=password]:focus {
     box-shadow: 0px 0px 10px #ff007d;
+}
+
+input[type=hidden] {
+    visibility: hidden;
+}
+
+form{
+    margin-top: 2vw;
+    margin-bottom:2vw;
 }
 
 .button {
@@ -48,7 +62,7 @@ input[type=text]:focus, input[type=password]:focus {
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
-    height: 7vh;
+    height: 7vw;
     border: none;
     width: 14vw;
     font-size: 1.2vw;
@@ -60,31 +74,15 @@ input[type=text]:focus, input[type=password]:focus {
     outline: none;
 }
 
-.longbutton {
-	
-	background: white;
-	box-shadow: 0px 0.5vh 2vh 0px rgba(0,0,0,0.75);
-    height: 7vh;
-    border: none;
-    width: 30vw;
-    font-size: 1.4vw;
-	text-align:center;
-	vertical-align:middle
-    font-family: 'Denmark';
-    margin: 10px;
-	padding: auto;
-    color: black;
-    border-radius: 10px;
-}
+
 .bigbutton {
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
-    height: 8vh;
+    height: 8vw;
     border: none;
     width: 18vw;
     font-size: 1.2vw;
-    margin: 10px;
     background-color: #ff007d;
     color: #fff6f6;
     border-radius: 10px;
@@ -101,8 +99,8 @@ input[type=text]:focus, input[type=password]:focus {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    padding: 5vh;
-    width:40vw;
+    padding: 5vw;
+    width:60vw;
     margin:0px auto;
     text-align:center;
     background-color:#eee;
@@ -116,6 +114,69 @@ input[type=text]:focus, input[type=password]:focus {
     text-align:center;
     background-color: #09b0ee;
     border-radius: 25px;
+}
+
+.center {
+    margin:0px auto
+}
+.mini {
+    background: white;
+    box-shadow: 0px 0.5vh 2vh 0px rgba(0,0,0,0.75);
+    border: none;
+    display: block;
+    text-align:center;
+    font-family: 'Denmark';
+    border-radius: 1vw;
+    margin-bottom: 3vw;
+    padding: 0.75vw;
+}
+.white{
+    background: white;
+    color: black;
+}
+.red{
+    background-color: #ee545a;
+    color: white;
+}
+.date {
+    background: white;
+    box-shadow: 0px 0.5vh 2vh 0px rgba(0,0,0,0.75);
+    height: 7vw;
+    border: none;
+    display: inline-block;
+    font-size: 1.4vw;
+    text-align:center;
+    line-height: 4vw;
+    font-family: 'Denmark';
+    color: black;
+    border-radius: 1vw;
+    margin: 0.75vw;
+}
+
+.datetop{
+    margin:0px auto;
+    width: 15vw;
+    height: 3vw;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 3vw;
+    padding-left: 1vw;
+    padding-right: 1vw;
+    padding-bottom: 0.1vw;
+    background-color: #ee545a;
+    border-top-left-radius: 1vw;
+    border-top-right-radius: 1vw;;
+    color: #fff;
+}
+.time{
+    display: inline-block;
+    padding-left: 1vw;
+    padding-right: 1vw;
+    padding-top: 0.1vw;
+    padding-bottom: 0.1vw;
+    margin-top: 1vw;
+    background-color: #ee545a;
+    border-radius: 10px;
 }
 
 table {
@@ -136,6 +197,5 @@ td, th {
 
 @font-face {
     font-family: 'Denmark';
-    src: url('/signin/css/denmark.ttf') format('truetype');
+    src: url('/signin1/css/denmark.ttf') format('truetype');
 }
-
